web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-func-expr-param/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,21)
1|const a = function (let) {}
 |                   ^
[SyntaxError]: unexpect keyword in strict mode (1,21)
1|const a = function (let) {}
 |                   ^
